--- a/app-manager/src/main/AndroidManifest.xml
+++ b/app-manager/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
         <provider xmlns:tools="http://schemas.android.com/tools"
-            tools:replace="android:authorities"
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.wuling.app.manager.provider"
+            android:authorities="${applicationId}.update.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
