--- a/app-manager/src/main/AndroidManifest.xml
+++ b/app-manager/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="me.wuling.components.manager">
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-        <provider xmlns:tools="http://schemas.android.com/tools"
-            android:name="android.support.v4.content.FileProvider"
+        <provider
+            android:name=".DownloadFileProvider"
             android:authorities="${applicationId}.update.provider"
             android:exported="false"
             android:grantUriPermissions="true">
